--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Streamdata Gallery
+title: Streamdata Gallery Scheduler
 url: scheduler.streamdata.gallery
 tag: Scheduler
 markdown: kramdown
